--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,21 @@
 
 # Except these files
 !.gitignore
+
 !*.v
 !Makefile
+
 !*.gtkw
 !*.pcf
 !*.md
 !*.py
+
 !*.S
 !*.c
+!*.h
+
 !*.ld
 
 # Even if they are in subdirectories
 !*/
+obj_dir/
